# hass-oidc-auth

./: .gitignore  .pylintrc  .pysentry.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIX.md  FUNDING.yml  LICENSE  LICENSE.md  README.md  SECURITY.md  THANKS.md  hacs.json  package-lock.json  package.json  pyproject.toml  pytest.ini  renovate.json
.github/ISSUE_TEMPLATE/: 0-anything-else.md  9-anything-else.md  bug_report.md  config.yml
.github/workflows/: build-pr.yaml  hacs.yaml  hassfest.yaml  lint.yaml  release.yaml  security.yaml  test.yaml
custom_components/auth_oidc/: __init__.py  callback.py  config.py  config_flow.py  example.py  helpers.py  manifest.json  oidc_client.py  provider.py  provider_catalog.py  types.py  validation.py
custom_components/auth_oidc/config/: __init__.py  const.py  provider_catalog.py  schema.py  ui_flow.py
custom_components/auth_oidc/endpoints/: __init__.py  callback.py  device_sse.py  finish.py  injected_auth_page.py  redirect.py  welcome.py
custom_components/auth_oidc/static/: injection.js  input.css  style.css
custom_components/auth_oidc/stores/: code_store.py  state_store.py
custom_components/auth_oidc/templates/: welcome.html
custom_components/auth_oidc/tools/: helpers.py  oidc_client.py  types.py  validation.py
custom_components/auth_oidc/translations/: en.json
custom_components/auth_oidc/views/: base.html  error.html  finish.html  loader.py  welcome.html
custom_components/auth_oidc/views/templates/: _alert.html  base.html  (+5 more)
docs/: configuration.md  faq.md  usage.md
docs/provider-configurations/: authelia.md  authentik.md  kanidm.md  keycloak.md  microsoft-entra.md  other.md  pocket-id.md  zitadel.md
scripts/: build  check  coverage-report  css  fix  security-check  sync  test  watchcss
tests/: test_code_store.py  test_hass_auth_provider.py  test_hass_oidc_client.py  test_hass_oidc_client_integration.py  test_hass_oidc_client_unit.py  test_hass_ui_config_flow.py  test_hass_webserver.py  test_hass_yaml_init.py  test_helpers.py  test_provider_catalog.py  test_state_store.py  test_view_template.py
tests/mocks/: auth_page.html  oidc_server.py
tests/mocks/scenarios/: empty.json  invalid_code_challenge_types.json  invalid_grant_types.json  invalid_id_token_signing_alg.json  invalid_response_modes.json  invalid_response_types.json  invalid_url.json  missing_jwks.json  missing_token.json  only_issuer.json  only_pkce_grant_type.json  username.json  wrong_id_token_signing_alg.json
tests/resources/fake_templates/: index.html
