[project]
name = "hass-oidc-auth"
version = "0.6.3"
description = "OIDC component for Home Assistant"
authors = [
    { name = "Christiaan Goossens", email = "contact@christiaangoossens.nl" }
]
license = "MIT"
dependencies = [
    "aiofiles~=25.1",
    "jinja2~=3.1",
    "bcrypt~=4.2",
    "joserfc~=1.4.0",
]
readme = "README.md"
requires-python = "~=3.13.7"

[dependency-groups]
dev = [
    "homeassistant~=2025.10",
    "pylint~=4.0",
    "ruff~=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["custom_components/auth_oidc"]