[project]
name = "hass-oidc-auth"
version = "0.7.0"
description = "OIDC component for Home Assistant"
authors = [
    { name = "Christiaan Goossens", email = "contact@christiaangoossens.nl" }
]
license = "MIT"
dependencies = [
    "aiofiles~=25.1",
    "jinja2~=3.1",
    "bcrypt~=5.0",
    "joserfc~=1.6.0",
]
readme = "README.md"
requires-python = "~=3.14.2"

[dependency-groups]
dev = [
    "homeassistant~=2026.1",
    "pylint~=4.0",
    "pytest~=9.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.0.0",
    "pytest-homeassistant-custom-component~=0.13.308",
    "ruff~=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["custom_components/auth_oidc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=custom_components --cov-fail-under=0"
log_level = "DEBUG"
